--- a/static/index.html
+++ b/static/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="refresh"
-      content="0; url=/"
+      content="0; url=Intro"
     />
     <script type="text/javascript">
-      window.location.href = '/';
+      window.location.href = 'Intro';
     </script>
     <title>Your Site Title Here</title>
   </head>
   <body>
     If you are not redirected automatically, follow this
-    <a href="/">link</a>.
+    <a href="Intro">link</a>.
   </body>
 </html>
